@@ -1,5 +1,11 @@
 2008-12-05  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
+	* templates/release.html:
+	* templates/module.html:
+	* templates/stats: Deleted. I hate Subversion ;)
+
+2008-12-05  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
 	* stats/management/commands/update-stats.py: Added comments.
 	* stats/models.py: Added comments.
 	* stats/utils.py: Minor PEP-8.
